<resources>
    <string name="app_name">WasteRecycler</string>
    <string name="SplaceTitle">WasteRecycler</string>
    <string name="email">Email</string>
    <string name="UserName">Username / Email</string>
    <string name="Password">Password </string>
    <string name="forgot_password">Forgot PassWord </string>
    <string name="agree"><![CDATA[Agree to Our Terms & Conditions]]></string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer </string>
    <string name="navigation_drawer_close">Close navigation drawe r</string>
    <string name="nav_header_title">Hackthone</string>
    <string name="nav_header_subtitle">HacksTreetBoys@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="current_location">Location</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="browse_waste">Categories</string>
    <string name="fresh_recommendations">Fresh Recommendations</string>
    <string name="sign_up">Sign Up</string>
    <string name="waste_name_and_company_name">Waste name and Company name</string>
    <string name="todo">TODO</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="tracking_location">Tracking Location</string>
    <string name="contact_no">Contact no</string>
    <string name="unselles">unsold</string>
    <string name="sell_items_list">Sell Items List</string>
    <string name="buy_items_list">Buy Items List</string>
    <string name="personal_info">Personal info</string>
    <string name="company_info">Company info</string>
    <string name="company_name_wrc">Company Name: WRC</string>
    <string name="address_info">Address info</string>
    <string name="country">Country:</string>
    <string name="state">State:</string>
    <string name="pinCode">Pin Code:</string>
    <string name="address">Address:</string>
    <string name="city">city:</string>
    <string name="submit">Continue</string>
    <string name="notifications">Notifications</string>
</resources>