<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/Waste_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="3dp"
        android:padding="2dp"
        android:text="@string/current_location"
        android:textColor="@color/Saft_black"
        app:drawableLeftCompat="@drawable/ic_outline_location_on_24"
        app:layout_constraintBottom_toTopOf="@+id/textView22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/Waste_img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="2dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/Waste_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_background"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/TitleOfWaste"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:padding="2dp"
        android:text="@string/waste_name_and_company_name"
        android:textColor="@color/Saft_black"
        app:layout_constraintBottom_toBottomOf="@+id/Waste_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toEndOf="@+id/Waste_img"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/quentity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:padding="2dp"
        android:text="@string/quantity"
        android:textColor="@color/Saft_black"
        app:layout_constraintBottom_toBottomOf="@+id/Waste_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toEndOf="@+id/Waste_img"
        app:layout_constraintTop_toBottomOf="@+id/TitleOfWaste"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/WastePrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:drawablePadding="5dp"
        android:padding="2dp"
        android:text="@string/price"
        android:textColor="@color/Saft_black"
        app:drawableLeftCompat="@drawable/ic_indian_rupee_symbol"
        app:layout_constraintBottom_toBottomOf="@+id/Waste_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toEndOf="@+id/Waste_img"
        app:layout_constraintTop_toBottomOf="@+id/quentity"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Unselles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="#FA0000"
        android:paddingStart="5dp"
        android:paddingTop="2dp"
        android:paddingEnd="5dp"
        android:paddingBottom="2dp"
        android:text="@string/unselles"
        android:textAllCaps="true"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/Waste_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toEndOf="@+id/Waste_img"
        app:layout_constraintTop_toBottomOf="@+id/WastePrice" />

    <TextView
        android:id="@+id/contact_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="3dp"
        android:padding="2dp"
        android:text="@string/contact_no"
        android:textColor="@color/Saft_black"
        app:drawableLeftCompat="@drawable/ic_outline_call_24"
        app:layout_constraintBottom_toTopOf="@+id/view6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView22" />

    <View
        android:id="@+id/view6"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#9C9C9C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:padding="3dp"
        android:text="Your Contact No "
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>